--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -5,7 +5,9 @@ pr:
 - '*'
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
+  demands: Agent.OS -equals WinNT
+  parallel: 3  # Set the maximum number of parallel jobs to 3
 
 steps:
 - script: |
