--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -5,9 +5,7 @@ pr:
 - '*'
 
 pool:
-  vmImage: 'windows-latest'
-  demands: Agent.OS -equals WinNT
-  parallel: 1  # Set the maximum number of parallel jobs to 3
+  name: test
 
 steps:
 - script: |
