--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -10,6 +10,8 @@ pool:
 steps:
 - script: |
     # Install Azure CLI
-    cd $(Agent.BuildDirectory)/terraform
+    cd $(Agent.BuildDirectory)/s/pipeline
     pwd
+    chmod +x githubbranch.sh
+    ./githubbranch.sh
   displayName: 'Terraform Plan & Apply'
