--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,14 +11,9 @@ jobs:
 - job: checkbranchstatus
   steps:
   - script: |
-      CURRENT_BRANCH=$(Build.SourceBranch)
-      pwd
-      ls
       cd $(Agent.BuildDirectory)/s/pipeline
-      pwd
-      ls
       chmod +x githubbranch.sh
-      ./githubbranch.sh "$CURRENT_BRANCH"
+      ./githubbranch.sh
 
     displayName: 'Precheck'
     continueOnError: false  # Allow the step to continue, even if it fails
