--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,12 +11,9 @@ jobs:
 - job: checkbranchstatus
   steps:
   - script: |
-       branch_reference="$BUILD_SOURCEBRANCH"
-       branch_name=${branch_reference#refs/heads/}
-       echo "Branch Name: $branch_name"
-    #   /bin/bash pipeline/githubbranch.sh 
-    # displayName: 'Precheck'
-    # continueOnError: false  # Allow the step to continue, even if it Fails
+      /bin/bash pipeline/githubbranch.sh 
+    displayName: 'Precheck'
+    continueOnError: false  # Allow the step to continue, even if it Fails
     # variables: 
     #   BRANCH_NAME: echo Build_SourceBranch
 
