--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,9 +11,9 @@ jobs:
 - job: checkbranchstatus
   steps:
   - script: |
-      branch_reference="$BUILD_SOURCEBRANCHNAME"
-      branch_name=${branch_reference#refs/heads/}
-      git checkout "$branch_name"
+      # branch_reference="$BUILD_SOURCEBRANCHNAME"
+      # branch_name=${branch_reference#refs/heads/}
+      # git checkout "$branch_name"
       /bin/bash pipeline/branch.sh 
     displayName: 'Precheck'
     continueOnError: false  # Allow the step to continue, even if it Fails
