--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -22,7 +22,7 @@ jobs:
       # git checkout main
 
       # Merge the latest changes from the main branch into the feature branch
-      git pull origin main
+      git merge "origin/main"
 
       # Push the updated feature branch back to the remote repository
       git push origin main
