--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,7 +17,7 @@ jobs:
       # .
       # Fetch the latest changes from the remote main branch
       
-      /bin/bash pipeline/githubbranch.sh
+      # /bin/bash pipeline/githubbranch.sh
     displayName: 'Precheck'
     continueOnError: false  # Allow the step to continue, even if it Fails
     # variables: 
