--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,19 +11,9 @@ jobs:
 - job: checkbranchstatus
   steps:
   - script: |
-      # pipeline/githubbranch.sh
-      # branch_reference="$BUILD_SOURCEBRANCHNAME"
-      # branch_name=${branch_reference#refs/heads/}
-      # git checkout "$branch_name"
-      # /bin/bash pipeline/githubbranch.sh
-      # Fetch the latest changes from the remote main branch
-      # /bin/bash pipeline/githubbranch.sh
-      
-      
+      /bin/bash pipeline/githubbranch.sh
     displayName: 'Precheck'
     continueOnError: false  # Allow the step to continue, even if it Fails
-    # variables: 
-    #   BRANCH_NAME: echo Build_SourceBranch
 
 - job: terraform
   dependsOn: checkbranchstatus
