--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -7,10 +7,9 @@ pool:
 jobs:
 - job: checkbranchstatus
   steps:
-  - checkout: self 
+  - checkout: origin/main 
     clean: true    
     fetchDepth: 0  
-    ref: 'refs/heads/feat/rrr-1'
   - script: |
       /bin/bash pipeline/githubbranch.sh
     displayName: 'Precheck'
