--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,7 +17,7 @@ stages:
 - stage: MainBranch
   jobs:
   - job: MainBranchJob
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
+    condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
     steps:
     - script: echo "This job runs for the main branch"
 
