--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,7 +17,7 @@ stages:
   - stage: branch_state  
     jobs:
       - job: branch_precheck
-        condition: ne(variables.isMain, true)
+        condition: eq(variables.isMain, true)
         steps:
           - checkout: self
             clean: true
@@ -33,6 +33,7 @@ stages:
             displayName: 'check_branch_status'
             continueOnError: false
   - stage: second
+    dependsOn: branch_state
     jobs:
       - job: terraform
         steps:
